--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@dratatin/lib_dropdown-react",
+  "name": "@dratatin/dropdown-react",
   "description": "simple dropdown component",
+  "author": "dratatin",
   "version": "0.1.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
