--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "URL_OF_YOUR_REPOSITORY"
+    "url": "https://github.com/Dratatin/lib_dropdown-react"
   },
   "scripts": {
     "start": "react-scripts start",
